# sweetbyte-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  garnix.yaml  result  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  cachix.yml  check.yml  code-quality.yml  update-flake.yml  update.yml
nix/: package.nix  shell.nix
src/: allocator.rs  app.rs  cli.rs  compression.rs  config.rs  encoding.rs  file.rs  files.rs  interactive.rs  lib.rs  main.rs  padding.rs  processor.rs  secret.rs  types.rs  validation.rs
src/app/: decrypt.rs  encrypt.rs  mod.rs
src/cipher/: aead.rs  aes.rs  aes256_gcm.rs  aes256gcm.rs  aes_gcm.rs  cacha20poly1305.rs  chacha.rs  chacha20poly1305.rs  cipher.rs  derive.rs  hash.rs  hasher.rs  key.rs  key_deriver.rs  mac.rs  mod.rs  protected.rs  signer.rs  stretch.rs
src/cli/: args.rs  commands.rs  mod.rs
src/codec/: compress.rs
src/compression/: compressor.rs  level.rs  mod.rs
src/config/: constants.rs  excluded.rs  mod.rs
src/core/: aes_gcm.rs  chacha20poly1305.rs  key.rs  mod.rs  signer.rs
src/crypto/: aes.rs  aes_gcm.rs  chacha.rs  chacha20.rs  cipher.rs  derive.rs  kdf.rs  mod.rs  random.rs
src/crypto/cipher/: aes.rs  chacha.rs  mod.rs
src/crypto/kdf/: mod.rs
src/crypto/random/: mod.rs
src/encoding/: chunking.rs  encoder.rs  encoding.rs  erasure.rs  mod.rs  reed_solomon.rs  shards.rs
src/engine/: executor.rs  mod.rs  pipeline.rs  reader.rs  writer.rs
src/file/: discover.rs  discovery.rs  handle.rs  hash.rs  mod.rs  operations.rs  validation.rs
src/file_manager/: config.rs  discovery.rs  io.rs  mod.rs  operations.rs  path.rs  validation.rs
src/files/: discover.rs  handle.rs
src/header/: deserializer.rs  encoding.rs  header.rs  mac.rs  marshal.rs  metadata.rs  mod.rs  parameter.rs  parameters.rs  reader.rs  section.rs  serializer.rs  types.rs  verification.rs  writer.rs
src/interactive/: menu.rs  mod.rs  process.rs  prompt.rs  select.rs  workflow.rs
src/padding/: mod.rs  padder.rs  padding.rs  pkcs7.rs
src/pipeline/: executor.rs  mod.rs  process.rs  processing.rs  reader.rs  task.rs  types.rs  writer.rs
src/prepare/: mod.rs
src/processor/: decryption.rs  decryptor.rs  encryption.rs  encryptor.rs  mod.rs
src/stream/: buffer.rs  executor.rs  mod.rs  pipeline.rs  pool.rs  processor.rs  reader.rs  worker.rs  writer.rs
src/tui/: display.rs  mod.rs  progress.rs  prompt.rs
src/types/: mod.rs  processor.rs  task.rs
src/ui/: ask.rs  display.rs  input.rs  mod.rs  progress.rs  prompt.rs
src/utils/: bytes.rs  mod.rs
src/worker/: buffer.rs  executor.rs  mod.rs  pipeline.rs  reader.rs  writer.rs
