[package]
name = "sweetbyte-rs"
version = "26.1.0"
edition = "2024"
description = "A very small, very simple, yet very secure encryption tool written in rust."
license = "MIT"
authors = ["Ilham Putra Husada <hambosto@gmail.com>"]
readme = "README.md"
keywords = ["encryption", "security", "crypto", "aes", "chacha20"]
categories = ["cryptography", "command-line-utilities"]
homepage = "https://github.com/hambosto/sweetbyte-rs"
repository = "https://github.com/hambosto/sweetbyte-rs"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.102"
blake3 = "1.8.5"
block-padding = "0.4.2"
bytemuck = { version = "1.25.0", features = ["derive"] }
byteorder = "1.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
cliclack = "0.5.4"
comfy-table = "7.2.2"
crc32fast = "1.5.0"
fast-glob = "1.0.1"
hex = "0.4.3"
hmac = "0.13.0"
humansize = "2.1.3"
mimalloc = { version = "0.1.48", features = ["v3"] }
nutype = { version = "0.7.0", features = ["serde"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.1"
reed-solomon-simd = "3.1.0"
scrypt = "0.12.0"
secrecy = "0.10.3"
serde = "1.0.228"
sha2 = "0.11.0"
strum = { version = "0.28.0", features = ["derive"] }
subtle = "2.6.1"
tokio = { version = "1.52.1", features = ["full"] }
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["thin"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
expect_used = "warn"
arithmetic_side_effects = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
