[package]
name = "sweetbyte-rs"
version = "26.1.0"
edition = "2024"
description = "A very small, very simple, yet very secure encryption tool written in rust."
license = "MIT"
authors = ["Ilham Putra Husada <hambosto@gmail.com>"]
readme = "README.md"
keywords = ["encryption", "security", "crypto", "aes", "chacha20"]
categories = ["cryptography", "command-line-utilities"]
homepage = "https://github.com/hambosto/sweetbyte-rs"
repository = "https://github.com/hambosto/sweetbyte-rs"

[dependencies]
anyhow            = "1.0.103"
argon2            = { version = "0.5.3", features = ["std", "zeroize"] }
aws-lc-rs         = { version = "1.17.1", default-features = false, features = ["aws-lc-sys"] }
blake3            = { version = "1.8.5", features = ["mmap", "rayon"] }
block-padding     = "0.4.2"
cliclack          = "0.5.4"
comfy-table       = "7.2.2"
crc32fast         = { version = "1.5.0", default-features = false }
fast-glob         = "1.0.1"
hex               = "0.4.3"
humansize         = "2.1.3"
mimalloc          = { version = "0.1.48", features = ["v3"] }
nutype            = { version = "0.7.0", default-features = false, features = ["serde"] }
oxicode           = { version = "0.2.4", features = ["serde"] }
reed-solomon-simd = { version = "3.1.0", default-features = false }
secrecy           = "0.10.3"
serde             = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_with        = { version = "3.21.0", default-features = false, features = ["base64", "macros"] }
strum             = { version = "0.28.0", default-features = false, features = ["derive"] }
subtle            = { version = "2.6.1", default-features = false }
tokio             = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
walkdir           = "2.5.0"
zstd              = { version = "0.13.3", features = ["thin"], default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
expect_used = "warn"
arithmetic_side_effects = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
