[package]
name       = "sweetbyte-rs"
version    = "26.1.0"
edition    = "2024"
license    = "MIT"
authors    = ["Ilham Putra Husada <hambosto@gmail.com>"]
homepage   = "https://github.com/hambosto/sweetbyte-rs"
repository = "https://github.com/hambosto/sweetbyte-rs"

[dependencies]
aead              = "0.6.1"
aes-gcm           = { version = "0.11.0", features = ["zeroize"] }
anyhow            = "1.0.104"
argon2            = { git = "https://github.com/RustCrypto/password-hashes.git", version = "0.6.0-rc.8", features = ["zeroize"] }
blake3            = { version = "1.8.5", features = ["mmap", "rayon"] }
block-padding     = "0.4.2"
chacha20poly1305  = { version = "0.11.0", features = ["zeroize"] }
cliclack          = "0.5.5"
comfy-table       = "7.2.2"
crc32fast         = "1.5.0"
fast-glob         = "1.1.0"
hex               = "0.4.3"
hkdf              = "0.13.0"
hmac              = { version = "0.13.0", features = ["zeroize"] }
humansize         = "2.1.3"
hybrid-array      = "0.4.13"
mimalloc          = { version = "=0.1.48", features = ["override", "v3"] }
nutype            = { version = "0.7.0", features = ["serde"] }
postcard          = { version = "1.1.3", features = ["use-std"] }
rand              = "0.10.2"
reed-solomon-simd = "3.1.0"
secrecy           = "0.10.3"
serde             = { version = "1.0.229", features = ["derive"] }
serde_with        = { version = "3.21.0", features = ["base64"] }
sha2              = { version = "0.11.0", features = ["zeroize"] }
strum             = { version = "0.28.0", features = ["derive"] }
subtle            = "2.6.1"
tokio             = { version = "1.53.1", features = ["full"] }
walkdir           = "2.5.0"
zstd              = { version = "0.13.3", features = ["thin"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true

[lints.clippy]
string_slice                    = "warn"
indexing_slicing                = "warn"
unwrap_used                     = "warn"
panic                           = "warn"
todo                            = "warn"
unimplemented                   = "warn"
unreachable                     = "warn"
get_unwrap                      = "warn"
unwrap_in_result                = "warn"
unchecked_time_subtraction      = "warn"
panic_in_result_fn              = "warn"
expect_used                     = "warn"
arithmetic_side_effects         = "warn"
let_underscore_future           = "warn"
let_underscore_must_use         = "warn"
unused_result_ok                = "warn"
map_err_ignore                  = "warn"
assertions_on_result_states     = "warn"
await_holding_lock              = "warn"
await_holding_refcell_ref       = "warn"
if_let_mutex                    = "warn"
large_futures                   = "warn"
mem_forget                      = "warn"
undocumented_unsafe_blocks      = "warn"
multiple_unsafe_ops_per_block   = "warn"
unnecessary_safety_doc          = "warn"
unnecessary_safety_comment      = "warn"
float_cmp                       = "warn"
float_cmp_const                 = "warn"
lossy_float_literal             = "warn"
cast_sign_loss                  = "warn"
invalid_upcast_comparisons      = "warn"
cast_possible_wrap              = "warn"
cast_precision_loss             = "warn"
cast_possible_truncation        = "warn"
rc_mutex                        = "warn"
debug_assert_with_mut_call      = "warn"
iter_not_returning_iterator     = "warn"
expl_impl_clone_on_copy         = "warn"
infallible_try_from             = "warn"
dbg_macro                       = "warn"
allow_attributes                = "warn"
allow_attributes_without_reason = "warn"
as_ptr_cast_mut                 = "warn"
as_underscore                   = "warn"
borrow_as_ptr                   = "warn"
implicit_clone                  = "warn"
unicode_not_nfc                 = "warn"
unused_async                    = "warn"
wildcard_dependencies           = "warn"
